--- a/src/components/demo.css
+++ b/src/components/demo.css
@@ -99,7 +99,7 @@
     .card-graphics-2{
         width:15%;
         float:none; 
-        margin-top:-65px;
+        margin-top:-64px;
         margin-left:-90px;
     }
     .card-text-2{
@@ -226,7 +226,7 @@
             display:none;
             width:15%;
             float:none; 
-            margin-top:-50px;
+            margin-top:-45px;
             margin-left:-80px;
         }
 
