--- a/src/pages/team.css
+++ b/src/pages/team.css
@@ -1,20 +1,22 @@
 @media screen and (max-width : 769px){
     .bio-container{
-        margin-top:10%;
+        height:100%;
+        margin-top:70%;
         flex-direction: column;
         text-align: center;
+        padding-bottom:20%;
     }
     .bio-name{
-        margin-bottom:5%;
+        padding-bottom:5%;
         width:100%;
     }
     .bio-pic{
-        margin-bottom:5%;
+        padding-bottom:5%;
 
         width:100%;
     }
     .bio-bio{
-        margin-bottom:10%;
+        padding-bottom:10%;
 
         width:100%;
     }
@@ -26,6 +28,7 @@
         float:left;
     }
     .team-cta{
+        padding-bottom:40%;
         flex-direction:column;
     }
     .team-cta-buttons{
@@ -33,8 +36,9 @@
     }
 }
 @media screen and (min-width : 769px){
+    
     .bio-container{
-        margin-top:15%;
+        margin-top:25%;
         flex-direction:row;
         flex-wrap:wrap;
         align-items:flex-start;
